--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -163,6 +163,10 @@ jobs:
             cxxstd: "03,11,14,17,2a"
             addrmd: 64
             os: windows-2019
+          - toolset: clang
+            cxxstd: "14,17"
+            addrmd: 32,64
+            os: windows-2019  
 
     runs-on: ${{matrix.os}}
 
